Fixing blog featured image alignment (#7630)

--- a/app/assets/stylesheets/partials/global_elements.sass
+++ b/app/assets/stylesheets/partials/global_elements.sass
@@ -3,6 +3,7 @@
   border-radius: 3px
   margin-bottom: $column-gutter
   position: relative
+  text-align:center
   img
     border-radius: 3px
     position: relative
